--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -60,7 +60,7 @@
 			class="login login-2 login-signin-on d-flex flex-column flex-column-fluid bg-white position-relative overflow-hidden" id="kt_login">
 			{% if error %}
 				<div class="container">
-					<div class="alert alert-custom alert-notice alert-light-danger fade show" role="alert">
+					<div class="alert alert-custom alert-notice alert-light-danger fade show mt-10" role="alert">
 						<div class="alert-icon">
 							<i class="flaticon-warning"></i>
 						</div>
