--- a/templates/administrateur/index.html.twig
+++ b/templates/administrateur/index.html.twig
@@ -11,11 +11,6 @@
 			</a>
 		</li>
 		<li class="menu-item" aria-haspopup="true">
-			<a href="#" class="menu-link">
-				<span class="menu-text">Publications</span>
-			</a>
-		</li>
-		<li class="menu-item" aria-haspopup="true">
 			<a href="{{ path('user_index') }}" class="menu-link">
 				<span class="menu-text">Utilisateurs</span>
 			</a>
@@ -41,12 +36,187 @@
 
 {% block content_body %}
 	<!--begin::Content-->
-	<div class="content d-flex flex-column flex-column-fluid" id="kt_content">
-		<div class="form-group mx-20">
-			<div class="alert alert-custom alert-default border border-danger" role="alert">
-				<div class="alert-text text-center h2">Administrateur index.</div>
+	<div
+		class="content d-flex flex-column flex-column-fluid" id="kt_content">
+		<!--begin::Entry-->
+		<div
+			class="d-flex flex-column-fluid">
+			<!--begin::Container-->
+			<div
+				class="container">
+				<!--begin::Row-->
+				<div class="row">
+					<div
+						class="col-xl-12">
+						<!--begin::Tables Widget 5-->
+						<div
+							class="card card-custom card-stretch" id="kt_blockui_content">
+							<!--begin::Header-->
+							<div class="card-header border-0 pt-7">
+								<h3 class="card-title align-items-start flex-column">
+									<span class="card-label font-weight-bold font-size-h4 text-dark-75">Réception publications</span>
+								</h3>
+								<div class="card-toolbar">
+									<ul class="nav nav-pills nav-pills-sm nav-dark">
+										<li class="nav-item ml-0">
+											<a class="nav-link py-2 px-4 {% if active == 'valid' %}active{% endif %} font-weight-bolder font-size-sm" href="{{ path('administrateur_index_valid') }}">Validées</a>
+										</li>
+										<li class="nav-item">
+											<a class="nav-link py-2 px-4 {% if active == 'no-valid' %}active{% endif %} font-weight-bolder font-size-sm" href="{{ path('administrateur_index') }}">Non Validées</a>
+										</li>
+										<li class="nav-item ml-0">
+											<a class="nav-link py-2 px-4 {% if active == 'refus-admin' %}active{% endif %} font-weight-bolder font-size-sm" href="{{ path('administrateur_index_refus_admin') }}">Refusée (Administrateur)</a>
+										</li>
+										<li class="nav-item ml-0">
+											<a class="nav-link py-2 px-4 {% if active == 'refus' %}active{% endif %} font-weight-bolder font-size-sm" href="{{ path('administrateur_index_refus') }}">Refusée (Modérateur)</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<!--end::Header-->
+							<!--begin::Body-->
+							<div class="card-body pt-0 pb-4">
+								<div
+									class="tab-content mt-2">
+									<!--begin::Tap pane-->
+									<div>
+										<!--begin::Table-->
+										<div class="table-responsive">
+											<table class="table table-borderless table-vertical-center">
+												<thead>
+													<tr>
+														<th class="p-0 w-50px"></th>
+														<!-- ICON -->
+														<th class="p-0 min-w-150px"></th>
+														<!-- NOM & PRENOM BENEFICIAIRE -->
+														<th class="p-0 min-w-75px"></th>
+														<!-- NUM CHEQUE -->
+														<th class="p-0 min-w-100px"></th>
+														<!-- NUM CHEQUIER -->
+														<th class="p-0 min-w-100px"></th>
+														<!-- MONTANT -->
+														<th class="p-0 min-w-150px"></th>
+														<!-- BANQUE -->
+														<th class="p-0 min-w-100px"></th>
+														<!-- DATE DECLARATION -->
+														<th class="p-0 min-w-150px"></th>
+														<!-- ACTIONS -->
+													</tr>
+												</thead>
+												<tbody>
+													{% if cheques %}
+														{% for cheque in cheques %}
+															<tr>
+																<td class="pl-0 py-5">
+																	<div class="symbol symbol-45 symbol-light mr-2">
+																		<span class="symbol-label font-size-h5">
+																			{{cheque.beneficiaire.nom|slice(0, 1)|upper}}{{cheque.beneficiaire.prenom|slice(0, 1)|upper}}
+																		</span>
+																	</div>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-bold mb-1 font-size-lg">{{cheque.beneficiaire.nom}}
+																		{{cheque.beneficiaire.prenom}}</span>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-bolder mb-1 font-size-lg">{{cheque.num}}</span>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-bolder mb-1 font-size-lg">{{cheque.chequier.numSerie}}</span>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-boldest mb-1 font-size-lg">{{cheque.montant}}</span>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-bolder mb-1 font-size-lg">{{cheque.chequier.compteBancaire.agence.banque.nom}}</span>
+																</td>
+																<td class="text-left font-weight-bolder">
+																	<span class="text-muted font-weight-bold">{{cheque.dateDeclaration|format_datetime('short', 'short', locale='fr')}}</span>
+																</td>
+																<td class="text-right pr-0">
+																	{% if active == "no-valid" %}
+																		<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Valider la publication" data-placement="top">
+																			<a href="#" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-1">
+																				<span
+																					class="svg-icon svg-icon-md svg-icon-primary">
+																					<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/File-done.svg-->
+																					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
+																						<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																							<polygon points="0 0 24 0 24 24 0 24"/>
+																							<path d="M5.85714286,2 L13.7364114,2 C14.0910962,2 14.4343066,2.12568431 14.7051108,2.35473959 L19.4686994,6.3839416 C19.8056532,6.66894833 20,7.08787823 20,7.52920201 L20,20.0833333 C20,21.8738751 19.9795521,22 18.1428571,22 L5.85714286,22 C4.02044787,22 4,21.8738751 4,20.0833333 L4,3.91666667 C4,2.12612489 4.02044787,2 5.85714286,2 Z M10.875,15.75 C11.1145833,15.75 11.3541667,15.6541667 11.5458333,15.4625 L15.3791667,11.6291667 C15.7625,11.2458333 15.7625,10.6708333 15.3791667,10.2875 C14.9958333,9.90416667 14.4208333,9.90416667 14.0375,10.2875 L10.875,13.45 L9.62916667,12.2041667 C9.29375,11.8208333 8.67083333,11.8208333 8.2875,12.2041667 C7.90416667,12.5875 7.90416667,13.1625 8.2875,13.5458333 L10.2041667,15.4625 C10.3958333,15.6541667 10.6354167,15.75 10.875,15.75 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
+																							<path d="M10.875,15.75 C10.6354167,15.75 10.3958333,15.6541667 10.2041667,15.4625 L8.2875,13.5458333 C7.90416667,13.1625 7.90416667,12.5875 8.2875,12.2041667 C8.67083333,11.8208333 9.29375,11.8208333 9.62916667,12.2041667 L10.875,13.45 L14.0375,10.2875 C14.4208333,9.90416667 14.9958333,9.90416667 15.3791667,10.2875 C15.7625,10.6708333 15.7625,11.2458333 15.3791667,11.6291667 L11.5458333,15.4625 C11.3541667,15.6541667 11.1145833,15.75 10.875,15.75 Z" fill="#000000"/>
+																						</g>
+																					</svg>
+																					<!--end::Svg Icon-->
+																				</span>
+																			</a>
+																		</div>
+																	{% endif %}
+
+																	{% if active == "no-valid" %}
+																		<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Refuser la publication" data-placement="top">
+																			<a href="#" class="btn btn-icon btn-light btn-hover-danger btn-sm mx-1">
+																				<span
+																					class="svg-icon svg-icon-md svg-icon-danger">
+																					<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/Deleted-file.svg-->
+																					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
+																						<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																							<polygon points="0 0 24 0 24 24 0 24"/>
+																							<path d="M5.85714286,2 L13.7364114,2 C14.0910962,2 14.4343066,2.12568431 14.7051108,2.35473959 L19.4686994,6.3839416 C19.8056532,6.66894833 20,7.08787823 20,7.52920201 L20,20.0833333 C20,21.8738751 19.9795521,22 18.1428571,22 L5.85714286,22 C4.02044787,22 4,21.8738751 4,20.0833333 L4,3.91666667 C4,2.12612489 4.02044787,2 5.85714286,2 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
+																							<path d="M10.5857864,13 L9.17157288,11.5857864 C8.78104858,11.1952621 8.78104858,10.5620972 9.17157288,10.1715729 C9.56209717,9.78104858 10.1952621,9.78104858 10.5857864,10.1715729 L12,11.5857864 L13.4142136,10.1715729 C13.8047379,9.78104858 14.4379028,9.78104858 14.8284271,10.1715729 C15.2189514,10.5620972 15.2189514,11.1952621 14.8284271,11.5857864 L13.4142136,13 L14.8284271,14.4142136 C15.2189514,14.8047379 15.2189514,15.4379028 14.8284271,15.8284271 C14.4379028,16.2189514 13.8047379,16.2189514 13.4142136,15.8284271 L12,14.4142136 L10.5857864,15.8284271 C10.1952621,16.2189514 9.56209717,16.2189514 9.17157288,15.8284271 C8.78104858,15.4379028 8.78104858,14.8047379 9.17157288,14.4142136 L10.5857864,13 Z" fill="#000000"/>
+																						</g>
+																					</svg>
+																					<!--end::Svg Icon-->
+																				</span>
+																			</a>
+																		</div>
+																	{% endif %}
+
+																	<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Détails Publication" data-placement="top">
+																		<a href="#" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-1">
+																			<span
+																				class="svg-icon svg-icon-md svg-icon-primary">
+																				<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/File.svg-->
+																				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
+																					<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																						<polygon points="0 0 24 0 24 24 0 24"/>
+																						<path d="M5.85714286,2 L13.7364114,2 C14.0910962,2 14.4343066,2.12568431 14.7051108,2.35473959 L19.4686994,6.3839416 C19.8056532,6.66894833 20,7.08787823 20,7.52920201 L20,20.0833333 C20,21.8738751 19.9795521,22 18.1428571,22 L5.85714286,22 C4.02044787,22 4,21.8738751 4,20.0833333 L4,3.91666667 C4,2.12612489 4.02044787,2 5.85714286,2 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
+																						<rect fill="#000000" x="6" y="11" width="9" height="2" rx="1"/>
+																						<rect fill="#000000" x="6" y="15" width="5" height="2" rx="1"/>
+																					</g>
+																				</svg>
+																				<!--end::Svg Icon-->
+																			</span>
+																		</a>
+																	</div>
+																</td>
+															</tr>
+														{% endfor %}
+													{% else %}
+														<div class="form-group mx-15">
+															<div class="alert alert-custom alert-default" role="alert">
+																<div class="alert-text text-center">Aucune Publication.</div>
+															</div>
+														</div>
+													{% endif %}
+												</tbody>
+											</table>
+										</div>
+										<!--end::Tablet-->
+									</div>
+									<!--end::Tap pane-->
+								</div>
+							</div>
+							<!--end::Body-->
+						</div>
+						<!--end::Tables Widget 5-->
+					</div>
+				</div>
+				<!--end::Row-->
 			</div>
+			<!--end::Container-->
 		</div>
+		<!--end::Entry-->
 	</div>
 	<!--end::Content-->
 {% endblock %}
