--- a/templates/beneficiaire/index.html.twig
+++ b/templates/beneficiaire/index.html.twig
@@ -33,7 +33,7 @@
 	{% if is_granted('ROLE_BENEFICIAIRE') %}
 		<div class="d-flex align-items-center flex-wrap">
 			<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Lancer une nouvelle publication" data-placement="top">
-				<a href="#" class="btn btn-light-primary font-weight-bolder px-5 mr-3 my-1">
+				<a href="{{ path('publication_new') }}" class="btn btn-light-primary font-weight-bolder px-5 mr-3 my-1">
 					<i class="fas fa-upload"></i>
 					Lancer Publication
 				</a>
@@ -94,117 +94,39 @@
 						</div>
 					</div>
 
-					<div class="p-1 col-md-4 ">
-						<div class="card card-custom wave wave-animate-fast wave-success m-1">
-							<div class="card-body">
-								<div class="d-flex align-items-center p-5">
-									<div class="mr-6">
-										<span class="svg-icon svg-icon-success svg-icon-4x">
-											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
-												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<rect x="0" y="0" width="24" height="24"/>
-													<path d="M3.5,21 L20.5,21 C21.3284271,21 22,20.3284271 22,19.5 L22,8.5 C22,7.67157288 21.3284271,7 20.5,7 L10,7 L7.43933983,4.43933983 C7.15803526,4.15803526 6.77650439,4 6.37867966,4 L3.5,4 C2.67157288,4 2,4.67157288 2,5.5 L2,19.5 C2,20.3284271 2.67157288,21 3.5,21 Z" fill="#000000" opacity="0.3"/>
-													<path d="M10.875,16.75 C10.6354167,16.75 10.3958333,16.6541667 10.2041667,16.4625 L8.2875,14.5458333 C7.90416667,14.1625 7.90416667,13.5875 8.2875,13.2041667 C8.67083333,12.8208333 9.29375,12.8208333 9.62916667,13.2041667 L10.875,14.45 L14.0375,11.2875 C14.4208333,10.9041667 14.9958333,10.9041667 15.3791667,11.2875 C15.7625,11.6708333 15.7625,12.2458333 15.3791667,12.6291667 L11.5458333,16.4625 C11.3541667,16.6541667 11.1145833,16.75 10.875,16.75 Z" fill="#000000"/>
-												</g>
-											</svg>
-										</span>
-									</div>
-									<div class="d-flex flex-column">
-										<a href="#" class="text-dark text-hover-primary font-weight-bold font-size-h4 mb-3">
-											User Guide
-										</a>
-										<div class="text-dark-75">
-											Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy since the 1500s.
+					{% for cheque in cheques %}
+						<div class="p-1 col-md-4 ">
+							<div class="card card-custom wave wave-animate-fast wave-success m-1">
+								<div class="card-body">
+									<div class="d-flex align-items-center p-5">
+										<div class="mr-6">
+											<span class="svg-icon svg-icon-success svg-icon-4x">
+												<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
+													<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+														<rect x="0" y="0" width="24" height="24"/>
+														<path d="M3.5,21 L20.5,21 C21.3284271,21 22,20.3284271 22,19.5 L22,8.5 C22,7.67157288 21.3284271,7 20.5,7 L10,7 L7.43933983,4.43933983 C7.15803526,4.15803526 6.77650439,4 6.37867966,4 L3.5,4 C2.67157288,4 2,4.67157288 2,5.5 L2,19.5 C2,20.3284271 2.67157288,21 3.5,21 Z" fill="#000000" opacity="0.3"/>
+														<path d="M10.875,16.75 C10.6354167,16.75 10.3958333,16.6541667 10.2041667,16.4625 L8.2875,14.5458333 C7.90416667,14.1625 7.90416667,13.5875 8.2875,13.2041667 C8.67083333,12.8208333 9.29375,12.8208333 9.62916667,13.2041667 L10.875,14.45 L14.0375,11.2875 C14.4208333,10.9041667 14.9958333,10.9041667 15.3791667,11.2875 C15.7625,11.6708333 15.7625,12.2458333 15.3791667,12.6291667 L11.5458333,16.4625 C11.3541667,16.6541667 11.1145833,16.75 10.875,16.75 Z" fill="#000000"/>
+													</g>
+												</svg>
+											</span>
+										</div>
+										<div class="d-flex flex-column">
+											<a href="#" class="text-dark text-hover-primary font-weight-bold font-size-h4 mb-3">
+												<u>{{cheque.num}}</u>
+												<span class="font-size-h5">({{cheque.chequier.numSerie}})</span>
+											</a>
+											<div class="text-dark-75">
+												<span class="font-weight-boldest">{{cheque.beneficiaire.nom}}
+													{{cheque.beneficiaire.prenom}}</span>
+												-
+												{{cheque.description}}
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-
-					<div class="p-1 col-md-4 ">
-						<div class="card card-custom wave wave-animate-fast wave-success m-1">
-							<div class="card-body">
-								<div class="d-flex align-items-center p-5">
-									<div class="mr-6">
-										<span class="svg-icon svg-icon-success svg-icon-4x">
-											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
-												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<rect x="0" y="0" width="24" height="24"/>
-													<path d="M3.5,21 L20.5,21 C21.3284271,21 22,20.3284271 22,19.5 L22,8.5 C22,7.67157288 21.3284271,7 20.5,7 L10,7 L7.43933983,4.43933983 C7.15803526,4.15803526 6.77650439,4 6.37867966,4 L3.5,4 C2.67157288,4 2,4.67157288 2,5.5 L2,19.5 C2,20.3284271 2.67157288,21 3.5,21 Z" fill="#000000" opacity="0.3"/>
-													<path d="M10.875,16.75 C10.6354167,16.75 10.3958333,16.6541667 10.2041667,16.4625 L8.2875,14.5458333 C7.90416667,14.1625 7.90416667,13.5875 8.2875,13.2041667 C8.67083333,12.8208333 9.29375,12.8208333 9.62916667,13.2041667 L10.875,14.45 L14.0375,11.2875 C14.4208333,10.9041667 14.9958333,10.9041667 15.3791667,11.2875 C15.7625,11.6708333 15.7625,12.2458333 15.3791667,12.6291667 L11.5458333,16.4625 C11.3541667,16.6541667 11.1145833,16.75 10.875,16.75 Z" fill="#000000"/>
-												</g>
-											</svg>
-										</span>
-									</div>
-									<div class="d-flex flex-column">
-										<a href="#" class="text-dark text-hover-primary font-weight-bold font-size-h4 mb-3">
-											User Guide
-										</a>
-										<div class="text-dark-75">
-											Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy since the 1500s.
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="p-1 col-md-4 ">
-						<div class="card card-custom wave wave-animate-fast wave-success m-1">
-							<div class="card-body">
-								<div class="d-flex align-items-center p-5">
-									<div class="mr-6">
-										<span class="svg-icon svg-icon-success svg-icon-4x">
-											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
-												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<rect x="0" y="0" width="24" height="24"/>
-													<path d="M3.5,21 L20.5,21 C21.3284271,21 22,20.3284271 22,19.5 L22,8.5 C22,7.67157288 21.3284271,7 20.5,7 L10,7 L7.43933983,4.43933983 C7.15803526,4.15803526 6.77650439,4 6.37867966,4 L3.5,4 C2.67157288,4 2,4.67157288 2,5.5 L2,19.5 C2,20.3284271 2.67157288,21 3.5,21 Z" fill="#000000" opacity="0.3"/>
-													<path d="M10.875,16.75 C10.6354167,16.75 10.3958333,16.6541667 10.2041667,16.4625 L8.2875,14.5458333 C7.90416667,14.1625 7.90416667,13.5875 8.2875,13.2041667 C8.67083333,12.8208333 9.29375,12.8208333 9.62916667,13.2041667 L10.875,14.45 L14.0375,11.2875 C14.4208333,10.9041667 14.9958333,10.9041667 15.3791667,11.2875 C15.7625,11.6708333 15.7625,12.2458333 15.3791667,12.6291667 L11.5458333,16.4625 C11.3541667,16.6541667 11.1145833,16.75 10.875,16.75 Z" fill="#000000"/>
-												</g>
-											</svg>
-										</span>
-									</div>
-									<div class="d-flex flex-column">
-										<a href="#" class="text-dark text-hover-primary font-weight-bold font-size-h4 mb-3">
-											User Guide
-										</a>
-										<div class="text-dark-75">
-											Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy since the 1500s.
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="p-1 col-md-4 ">
-						<div class="card card-custom wave wave-animate-fast wave-success m-1">
-							<div class="card-body">
-								<div class="d-flex align-items-center p-5">
-									<div class="mr-6">
-										<span class="svg-icon svg-icon-success svg-icon-4x">
-											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
-												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-													<rect x="0" y="0" width="24" height="24"/>
-													<path d="M3.5,21 L20.5,21 C21.3284271,21 22,20.3284271 22,19.5 L22,8.5 C22,7.67157288 21.3284271,7 20.5,7 L10,7 L7.43933983,4.43933983 C7.15803526,4.15803526 6.77650439,4 6.37867966,4 L3.5,4 C2.67157288,4 2,4.67157288 2,5.5 L2,19.5 C2,20.3284271 2.67157288,21 3.5,21 Z" fill="#000000" opacity="0.3"/>
-													<path d="M10.875,16.75 C10.6354167,16.75 10.3958333,16.6541667 10.2041667,16.4625 L8.2875,14.5458333 C7.90416667,14.1625 7.90416667,13.5875 8.2875,13.2041667 C8.67083333,12.8208333 9.29375,12.8208333 9.62916667,13.2041667 L10.875,14.45 L14.0375,11.2875 C14.4208333,10.9041667 14.9958333,10.9041667 15.3791667,11.2875 C15.7625,11.6708333 15.7625,12.2458333 15.3791667,12.6291667 L11.5458333,16.4625 C11.3541667,16.6541667 11.1145833,16.75 10.875,16.75 Z" fill="#000000"/>
-												</g>
-											</svg>
-										</span>
-									</div>
-									<div class="d-flex flex-column">
-										<a href="#" class="text-dark text-hover-primary font-weight-bold font-size-h4 mb-3">
-											User Guide
-										</a>
-										<div class="text-dark-75">
-											Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy since the 1500s.
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+					{% endfor %}
 				</div>
 			</div>
 		</div>
