--- a/templates/moderateur/index.html.twig
+++ b/templates/moderateur/index.html.twig
@@ -54,10 +54,13 @@
 								<div class="card-toolbar">
 									<ul class="nav nav-pills nav-pills-sm nav-dark">
 										<li class="nav-item ml-0">
-											<a class="nav-link py-2 px-4 font-weight-bolder font-size-sm" href="#kt_tab_table_5_2">Validées</a>
+											<a class="nav-link py-2 px-4 {% if active == 'refus' %}active{% endif %} font-weight-bolder font-size-sm" href="{{ path('moderateur_index_refus') }}">Refusée</a>
+										</li>
+										<li class="nav-item ml-0">
+											<a class="nav-link py-2 px-4 {% if active == 'valid' %}active{% endif %} font-weight-bolder font-size-sm" href="{{ path('moderateur_index_valid') }}">Validées</a>
 										</li>
 										<li class="nav-item">
-											<a class="nav-link py-2 px-4 active font-weight-bolder font-size-sm" href="#kt_tab_table_5_3">Non Validées</a>
+											<a class="nav-link py-2 px-4 {% if active == 'no-valid' %}active{% endif %} font-weight-bolder font-size-sm" href="{{ path('moderateur_index') }}">Non Validées</a>
 										</li>
 									</ul>
 								</div>
@@ -75,70 +78,119 @@
 												<thead>
 													<tr>
 														<th class="p-0 w-50px"></th>
-														<th class="p-0 min-w-200px"></th>
+														<!-- ICON -->
+														<th class="p-0 min-w-150px"></th>
+														<!-- NOM & PRENOM BENEFICIAIRE -->
+														<th class="p-0 min-w-75px"></th>
+														<!-- NUM CHEQUE -->
 														<th class="p-0 min-w-100px"></th>
+														<!-- NUM CHEQUIER -->
 														<th class="p-0 min-w-100px"></th>
+														<!-- MONTANT -->
+														<th class="p-0 min-w-150px"></th>
+														<!-- BANQUE -->
 														<th class="p-0 min-w-100px"></th>
-														<th class="p-0 min-w-100px"></th>
+														<!-- DATE DECLARATION -->
+														<th class="p-0 min-w-150px"></th>
+														<!-- ACTIONS -->
 													</tr>
 												</thead>
 												<tbody>
-													<tr>
-														<td class="pl-0 py-5">
-															<div class="symbol symbol-45 symbol-light mr-2">
-																<span class="symbol-label font-size-h5">
-																	AB
-																</span>
+													{% if cheques %}
+														{% for cheque in cheques %}
+															<tr>
+																<td class="pl-0 py-5">
+																	<div class="symbol symbol-45 symbol-light mr-2">
+																		<span class="symbol-label font-size-h5">
+																			{{cheque.beneficiaire.nom|slice(0, 1)|upper}}{{cheque.beneficiaire.prenom|slice(0, 1)|upper}}
+																		</span>
+																	</div>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-bold mb-1 font-size-lg">{{cheque.beneficiaire.nom}}
+																		{{cheque.beneficiaire.prenom}}</span>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-bolder mb-1 font-size-lg">{{cheque.num}}</span>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-bolder mb-1 font-size-lg">{{cheque.chequier.numSerie}}</span>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-boldest mb-1 font-size-lg">{{cheque.montant}}</span>
+																</td>
+																<td class="pl-0">
+																	<span class="text-dark-75 font-weight-bolder mb-1 font-size-lg">{{cheque.chequier.compteBancaire.agence.banque.nom}}</span>
+																</td>
+																<td class="text-left font-weight-bolder">
+																	<span class="text-muted font-weight-bold">{{cheque.dateDeclaration|format_datetime('short', 'short', locale='fr')}}</span>
+																</td>
+																<td class="text-right pr-0">
+																	{% if active == "no-valid" %}
+																		<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Valider la publication" data-placement="top">
+																			<a href="#" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-1">
+																				<span
+																					class="svg-icon svg-icon-md svg-icon-primary">
+																					<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/File-done.svg-->
+																					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
+																						<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																							<polygon points="0 0 24 0 24 24 0 24"/>
+																							<path d="M5.85714286,2 L13.7364114,2 C14.0910962,2 14.4343066,2.12568431 14.7051108,2.35473959 L19.4686994,6.3839416 C19.8056532,6.66894833 20,7.08787823 20,7.52920201 L20,20.0833333 C20,21.8738751 19.9795521,22 18.1428571,22 L5.85714286,22 C4.02044787,22 4,21.8738751 4,20.0833333 L4,3.91666667 C4,2.12612489 4.02044787,2 5.85714286,2 Z M10.875,15.75 C11.1145833,15.75 11.3541667,15.6541667 11.5458333,15.4625 L15.3791667,11.6291667 C15.7625,11.2458333 15.7625,10.6708333 15.3791667,10.2875 C14.9958333,9.90416667 14.4208333,9.90416667 14.0375,10.2875 L10.875,13.45 L9.62916667,12.2041667 C9.29375,11.8208333 8.67083333,11.8208333 8.2875,12.2041667 C7.90416667,12.5875 7.90416667,13.1625 8.2875,13.5458333 L10.2041667,15.4625 C10.3958333,15.6541667 10.6354167,15.75 10.875,15.75 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
+																							<path d="M10.875,15.75 C10.6354167,15.75 10.3958333,15.6541667 10.2041667,15.4625 L8.2875,13.5458333 C7.90416667,13.1625 7.90416667,12.5875 8.2875,12.2041667 C8.67083333,11.8208333 9.29375,11.8208333 9.62916667,12.2041667 L10.875,13.45 L14.0375,10.2875 C14.4208333,9.90416667 14.9958333,9.90416667 15.3791667,10.2875 C15.7625,10.6708333 15.7625,11.2458333 15.3791667,11.6291667 L11.5458333,15.4625 C11.3541667,15.6541667 11.1145833,15.75 10.875,15.75 Z" fill="#000000"/>
+																						</g>
+																					</svg>
+																					<!--end::Svg Icon-->
+																				</span>
+																			</a>
+																		</div>
+																	{% endif %}
+
+																	{% if active == "no-valid" %}
+																		<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Refuser la publication" data-placement="top">
+																			<a href="#" class="btn btn-icon btn-light btn-hover-danger btn-sm mx-1">
+																				<span
+																					class="svg-icon svg-icon-md svg-icon-danger">
+																					<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/Deleted-file.svg-->
+																					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
+																						<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																							<polygon points="0 0 24 0 24 24 0 24"/>
+																							<path d="M5.85714286,2 L13.7364114,2 C14.0910962,2 14.4343066,2.12568431 14.7051108,2.35473959 L19.4686994,6.3839416 C19.8056532,6.66894833 20,7.08787823 20,7.52920201 L20,20.0833333 C20,21.8738751 19.9795521,22 18.1428571,22 L5.85714286,22 C4.02044787,22 4,21.8738751 4,20.0833333 L4,3.91666667 C4,2.12612489 4.02044787,2 5.85714286,2 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
+																							<path d="M10.5857864,13 L9.17157288,11.5857864 C8.78104858,11.1952621 8.78104858,10.5620972 9.17157288,10.1715729 C9.56209717,9.78104858 10.1952621,9.78104858 10.5857864,10.1715729 L12,11.5857864 L13.4142136,10.1715729 C13.8047379,9.78104858 14.4379028,9.78104858 14.8284271,10.1715729 C15.2189514,10.5620972 15.2189514,11.1952621 14.8284271,11.5857864 L13.4142136,13 L14.8284271,14.4142136 C15.2189514,14.8047379 15.2189514,15.4379028 14.8284271,15.8284271 C14.4379028,16.2189514 13.8047379,16.2189514 13.4142136,15.8284271 L12,14.4142136 L10.5857864,15.8284271 C10.1952621,16.2189514 9.56209717,16.2189514 9.17157288,15.8284271 C8.78104858,15.4379028 8.78104858,14.8047379 9.17157288,14.4142136 L10.5857864,13 Z" fill="#000000"/>
+																						</g>
+																					</svg>
+																					<!--end::Svg Icon-->
+																				</span>
+																			</a>
+																		</div>
+																	{% endif %}
+
+																	<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Détails Publication" data-placement="top">
+																		<a href="#" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-1">
+																			<span
+																				class="svg-icon svg-icon-md svg-icon-primary">
+																				<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/File.svg-->
+																				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
+																					<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																						<polygon points="0 0 24 0 24 24 0 24"/>
+																						<path d="M5.85714286,2 L13.7364114,2 C14.0910962,2 14.4343066,2.12568431 14.7051108,2.35473959 L19.4686994,6.3839416 C19.8056532,6.66894833 20,7.08787823 20,7.52920201 L20,20.0833333 C20,21.8738751 19.9795521,22 18.1428571,22 L5.85714286,22 C4.02044787,22 4,21.8738751 4,20.0833333 L4,3.91666667 C4,2.12612489 4.02044787,2 5.85714286,2 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
+																						<rect fill="#000000" x="6" y="11" width="9" height="2" rx="1"/>
+																						<rect fill="#000000" x="6" y="15" width="5" height="2" rx="1"/>
+																					</g>
+																				</svg>
+																				<!--end::Svg Icon-->
+																			</span>
+																		</a>
+																	</div>
+																</td>
+															</tr>
+														{% endfor %}
+													{% else %}
+														<div class="form-group mx-15">
+															<div class="alert alert-custom alert-default" role="alert">
+																<div class="alert-text text-center">Aucune Publication.</div>
 															</div>
-														</td>
-														<td class="pl-0">
-															<a href="#" class="text-dark-75 font-weight-bolder text-hover-primary mb-1 font-size-lg">Commentaire</a>
-														</td>
-														<td class="text-left font-weight-bold">
-															<span class="text-muted font-weight-bold">Abir Par Exemple</span>
-														</td>
-														<td class="text-left font-weight-bold">
-															<span class="text-muted font-weight-500">{{ '2019-08-07 23:39:12'|format_datetime('short', 'short', locale='fr') }}</span>
-														</td>
-														<td class="text-right">
-															<div data-toggle="tooltip" title="Télécharger" data-placement="top">
-																<span class="label label-lg label-light-warning label-inline">Non Validées</span>
-															</div>
-														</td>
-														<td class="text-right pr-0">
-															<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Télécharger" data-placement="left">
-																<a href="#" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3">
-																	<span
-																		class="svg-icon svg-icon-md svg-icon-primary">
-																		<!--begin::Svg Icon | path:/keen/theme/demo6/dist/assets/media/svg/icons/Communication/Write.svg-->
-																		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
-																			<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-																				<rect x="0" y="0" width="24" height="24"/>
-																				<path d="M12.2674799,18.2323597 L12.0084872,5.45852451 C12.0004303,5.06114792 12.1504154,4.6768183 12.4255037,4.38993949 L15.0030167,1.70195304 L17.5910752,4.40093695 C17.8599071,4.6812911 18.0095067,5.05499603 18.0083938,5.44341307 L17.9718262,18.2062508 C17.9694575,19.0329966 17.2985816,19.701953 16.4718324,19.701953 L13.7671717,19.701953 C12.9505952,19.701953 12.2840328,19.0487684 12.2674799,18.2323597 Z" fill="#000000" fill-rule="nonzero" transform="translate(14.701953, 10.701953) rotate(-135.000000) translate(-14.701953, -10.701953)"/>
-																				<path d="M12.9,2 C13.4522847,2 13.9,2.44771525 13.9,3 C13.9,3.55228475 13.4522847,4 12.9,4 L6,4 C4.8954305,4 4,4.8954305 4,6 L4,18 C4,19.1045695 4.8954305,20 6,20 L18,20 C19.1045695,20 20,19.1045695 20,18 L20,13 C20,12.4477153 20.4477153,12 21,12 C21.5522847,12 22,12.4477153 22,13 L22,18 C22,20.209139 20.209139,22 18,22 L6,22 C3.790861,22 2,20.209139 2,18 L2,6 C2,3.790861 3.790861,2 6,2 L12.9,2 Z" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
-																			</g>
-																		</svg>
-																		<!--end::Svg Icon-->
-																	</span>
-																</a>
-															</div>
-															<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Télécharger" data-placement="left">
-																<a href="#" class="btn btn-icon btn-light btn-hover-danger btn-sm">
-																	<span
-																		class="svg-icon svg-icon-md svg-icon-danger">
-																		<!--begin::Svg Icon | path:/keen/theme/demo6/dist/assets/media/svg/icons/General/Trash.svg-->
-																		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewbox="0 0 24 24" version="1.1">
-																			<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-																				<rect x="0" y="0" width="24" height="24"/>
-																				<path d="M3,13.5 L19,12 L3,10.5 L3,3.7732928 C3,3.70255344 3.01501031,3.63261921 3.04403925,3.56811047 C3.15735832,3.3162903 3.45336217,3.20401298 3.70518234,3.31733205 L21.9867539,11.5440392 C22.098181,11.5941815 22.1873901,11.6833905 22.2375323,11.7948177 C22.3508514,12.0466378 22.2385741,12.3426417 21.9867539,12.4559608 L3.70518234,20.6826679 C3.64067359,20.7116969 3.57073936,20.7267072 3.5,20.7267072 C3.22385763,20.7267072 3,20.5028496 3,20.2267072 L3,13.5 Z" fill="#000000"/>
-																			</g>
-																		</svg>
-																		<!--end::Svg Icon-->
-																	</span>
-																</a>
-															</div>
-														</td>
-													</tr>
+														</div>
+													{% endif %}
 												</tbody>
 											</table>
 										</div>
