--- a/templates/administrateur/index.html.twig
+++ b/templates/administrateur/index.html.twig
@@ -136,7 +136,7 @@
 																<td class="text-right pr-0">
 																	{% if active == "no-valid" %}
 																		<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Valider la publication" data-placement="top">
-																			<a href="#" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-1">
+																			<a href="{{path('publication_valid', {'id':cheque.id })}}" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-1">
 																				<span
 																					class="svg-icon svg-icon-md svg-icon-primary">
 																					<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/File-done.svg-->
@@ -155,7 +155,7 @@
 
 																	{% if active == "no-valid" %}
 																		<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Refuser la publication" data-placement="top">
-																			<a href="#" class="btn btn-icon btn-light btn-hover-danger btn-sm mx-1">
+																			<a href="{{path('publication_admin_refuse', {'id':cheque.id })}}" class="btn btn-icon btn-light btn-hover-danger btn-sm mx-1">
 																				<span
 																					class="svg-icon svg-icon-md svg-icon-danger">
 																					<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/Deleted-file.svg-->
