--- a/templates/administrateur/index.html.twig
+++ b/templates/administrateur/index.html.twig
@@ -173,7 +173,7 @@
 																	{% endif %}
 
 																	<div class="dropdown dropdown-inline" data-toggle="tooltip" title="Détails Publication" data-placement="top">
-																		<a href="#" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-1">
+																		<a href="{{path('publication_show', {'id':cheque.id })}}" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-1">
 																			<span
 																				class="svg-icon svg-icon-md svg-icon-primary">
 																				<!--begin::Svg Icon | path:/var/www/preview.keenthemes.com/keen/releases/2020-10-07-041015/theme/demo6/dist/../src/media/svg/icons/Files/File.svg-->
